@@ -2,6 +2,8 @@
 
     * Consolidation of preferences into "Default Session" of 
       addressbook. New look for addressbook.
+      
+    * Restructured addressbook GUI.
 
 2003-05-18	ujwal
 
